syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";
import "barber/barbershop_chains.proto";

option go_package = "barbershop/src/pb/barber";


message CreateBarberShopChainsRequest{
    string name = 1;
    string description = 2;
    string founder = 3;
    google.protobuf.Timestamp founding_date = 4;
    string website = 5;
}

message CreateBarberShopChainsResponse{
    BarberShopChains barbershop_chain = 1;
}